--- a/index.html
+++ b/index.html
@@ -68,12 +68,43 @@
                     <div class="clear"></div>
                 </div>
             </div>
+            <!-- Buy tickets -->
+    <div id="modal">
+        <div class="modal-container">
+            <header class="modal-header">
+                <h2 class="text-header">
+                    <i class="ti-bag"></i>
+                    Tickets
+                </h2>
+                <div class="modal-close"><i class="ti-close"></i></div>
+            </header>
+            <div class="modal-body">
+                <p>
+                    <label for="" class="modal-label">
+                        <i class="ti-shopping-cart"></i>
+                        Tickets, $15 per person
+                    </label>
+                </p>
+                <input type="text" class="modal-input" placeholder="How many?">
+                <p>
+                    <label for="" class="modal-label">
+                        <i class="ti-shopping-cart"></i>
+                        Send To
+                    </label>
+                </p>
+                <input type="text" class="modal-input" placeholder="Enter email">
+                <button class="buy-tickets">
+                    PAY <i class="ti-check"></i>
+                </button>
+                <p class="modal-help">Need <a href="">help?</a> </p>
+            </div>
+        </div>
+    </div>
             <!-- Tour section -->
             <div id="tour-section">
-                <div class="content-section ">
+                <div class="content-section">
                     <h2 class="section-heading text-white">TOUR DATES</h2>
                     <p class="section-sub-heading text-white">Remember to book your tickets!</p>
-                    <br>
                     
                     <!-- Buy Ticket -->
                     <ul class="tickets-list">
@@ -86,12 +117,34 @@
                         <div class="place-item">
                             <img src="/assets/img/place/place1.jpg" alt="New York" width="100%" class="place-img">
                             <div class="place-body">
-                                <h3 class="place-heading">New York</h3>
-                                <p class="place-time">Fri 27 Nov 2016</p>
+                                <h4 class="place-heading">New York</h4>
+                                <p class="place-time text-gray">Fri 27 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="" class="place-buy-btn">Buy Ticket</a>
+                                <a href="" class="place-buy-btn">Buy Tickets</a>
+                                <div class="clear"></div>
                             </div>
                         </div> 
+
+                        <div class="place-item">
+                            <img src="/assets/img/place/place2.jpg" alt="Paris" width="100%" class="place-img">
+                            <div class="place-body">
+                                <h4 class="place-heading">Paris</h4>
+                                <p class="place-time">Sat 28 Nov 2016</p>
+                                <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="" class="place-buy-btn">Buy Tickets</a>
+                            </div>
+                        </div> 
+
+                        <div class="place-item">
+                            <img src="/assets/img/place/place3.jpg" alt="San Francisco" width="100%" class="place-img">
+                            <div class="place-body">
+                                <h4 class="place-heading">San Francisco</h4>
+                                <p class="place-time">Sun 29 Nov 2016</p>
+                                <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                                <a href="" class="place-buy-btn">Buy Tickets</a>
+                            </div>
+                        </div> 
+                        <div class="clear"></div>
                     </div>
                 </div>
             </div>   
