--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <!-- Begin Header -->
         <div id="header">
            <ul id="nav">
-               <li><a href="">Home</a></li>
-               <li><a href="">Band</a></li>
-               <li><a href="">Tour</a></li>
-               <li><a href="">Contact</a></li>
+               <li><a href="#">Home</a></li>
+               <li><a href="#band">Band</a></li>
+               <li><a href="#tour">Tour</a></li>
+               <li><a href="#contact">Contact</a></li>
                <li>
                     <a href="">More <i class="ti-angle-down" style="font-size:10px;"></i> </a>
                     <ul class="subnav">
-                        <li><a href="">Merchandise</a></li>
-                        <li><a href="">Extras</a></li>
-                        <li><a href="">Media</a></li>
+                        <li><a href="#">Merchandise</a></li>
+                        <li><a href="#">Extras</a></li>
+                        <li><a href="#">Media</a></li>
                     </ul>
                 </li>
            </ul>
@@ -44,7 +44,7 @@
         <!-- Begin Content -->
         <div id="content">
             <!-- About section -->
-            <div class="content-section">
+            <div id="band" class="content-section">
                 <h2 class="section-heading">THE BAND</h2>
                 <p class="section-sub-heading">
                     <i>We love music</i>
@@ -70,7 +70,7 @@
             </div>
             <!-- Tour section -->
             <div class="bg-black">
-                <div class="content-section">
+                <div id="tour" class="content-section">
                     <h2 class="section-heading">TOUR DATES</h2>
                     <p class="section-sub-heading">
                         <i>Remember to book your tickets!</i>
@@ -125,7 +125,7 @@
                 </div>
             </div>   
             <!-- Contact section -->
-            <div class="content-section">
+            <div id="contact" class="content-section">
                 <h2 class="section-heading">CONTACT</h2>
                 <p class="section-sub-heading">
                     <i>Fan?Drop a note!</i>
@@ -154,10 +154,23 @@
                     </form>
                 </div>
             </div>
+            <!-- Map Section -->
+            <div>
+                <img src="/assets/img/slider/map.jpg" alt="Map" style="width: 100%;">
+            </div>
         </div>
 
+        <!-- Footer Section -->
         <div id="footer">
-
+            <div  class="social-list">
+                <a href="#"><i class="ti-facebook"></i></a>
+                <a href="#"><i class="ti-instagram"></i></a>
+                <a href="#"><i class="ti-youtube"></i></a>
+                <a href="#"><i class="ti-pinterest"></i></a>
+                <a href="#"><i class="ti-twitter"></i></a>
+                <a href="#"><i class="ti-linkedin"></i></a>  
+                <p>Powered by <a href="#">w3.css</a></p>              
+            </div>
         </div>
     </div>
     <!-- Modal buy tickets -->
