--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
             
             <label for="nav__mobile-input" class="nav__overlay"></label>
             
+            <ul class="nav__mobile">
+                <li class="nav__mobile-home"><a href="#">Home</a></li>
+            </ul>
+
             <label for="nav__mobile-input" class="nav__tablet">
                 <ul class="nav__mobile">
-                    <li class="not-hide"><a href="#">Home</a></li>
+                    <li class="nav__mobile-home"><a href="#">Home</a></li>
                     <li><a href="#band">Band</a></li>
                     <li><a href="#tour">Tour</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -185,7 +189,7 @@
                 <a href="#"><i class="ti-pinterest"></i></a>
                 <a href="#"><i class="ti-twitter"></i></a>
                 <a href="#"><i class="ti-linkedin"></i></a>  
-                <p>Powered by <a href="#">w3.css</a></p>              
+                <p>Powered by <a href="#" style="text-decoration: underline">w3.css</a></p>              
             </div>
         </div>
     </div>
