--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 </p>
                                 <p class="opacity">Fri 27 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="button margin-bottom bg-black js-buy-ticket">Buy Tickets</button>
+                                <button class="button margin-bottom bg-black js-buy-ticket s-full-width">Buy Tickets</button>
                                 <div class="clear"></div>
                             </div>
                         </div> 
@@ -125,7 +125,7 @@
                                 </p>
                                 <p class="opacity">Sat 28 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="button margin-bottom bg-black js-buy-ticket">Buy Tickets</button>
+                                <button class="button margin-bottom bg-black js-buy-ticket s-full-width">Buy Tickets</button>
                             </div>
                         </div> 
 
@@ -137,7 +137,7 @@
                                 </p>    
                                 <p class="opacity">Sun 29 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="button margin-bottom bg-black js-buy-ticket">Buy Tickets</button>
+                                <button class="button margin-bottom bg-black js-buy-ticket s-full-width">Buy Tickets</button>
                             </div>
                         </div> 
                         <div class="clear"></div>
@@ -151,7 +151,7 @@
                     <i>Fan?Drop a note!</i>
                 </p>
                 <div class="contact-section row row-padding padding-32">
-                    <div class="col col-half margin-bottom contact-info">
+                    <div class="col col-half s-col-full margin-bottom contact-info">
                         <p class="mt-0"><i class="ti-location-pin"></i>Chicago, US</p>
                         <p><i class="ti-mobile"></i>Phone: +00 151515</p>
                         <p><i class="ti-email"></i>Email: mail@mail.com</p>
@@ -170,7 +170,7 @@
                                 <input type="text" name="" placeholder="Message" required id="" class="form-control">
                             </div>
                         </div>
-                        <input type="submit" value="SEND" class="form-submit-btn button mg-bt-16">
+                        <input type="submit" value="SEND" class="form-submit-btn button mg-bt-16 s-full-width">
                     </form>
                 </div>
             </div>
