--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 <div class="contact-section row row-padding padding-32">
                     <div class="col col-half s-col-full margin-bottom contact-info">
                         <p class="mt-0"><i class="ti-location-pin"></i>Chicago, US</p>
-                        <p><i class="ti-mobile"></i>Phone: +00 151515</p>
-                        <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                        <p><i class="ti-mobile"></i>Phone: <a href="tel:00 151515">+00 151515</a></p>
+                        <p><i class="ti-email"></i>Email: <a href="mailto:mail@mail.com">mail@mail.com</a></p>
                     </div>
                     <form action="">
                         <div class="row row-padding contact-form">
